--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,7 +1,8 @@
 // Import your components CSS files here.
 
-// reminder: for every new page (=file) that we create, then modify
-// pages/_index.scss as:
+// reminder: for every new page (=file) that we create, then e need to @import
+// this page in the '_index.scss' in the folder.
 
 @import "alert";
 @import "navbar";
+@import "restaurants";
