--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -8,6 +8,7 @@
       <th>Name</th>
       <th>Phone number</th>
       <th>Category</th>
+       <th>Address</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,16 +16,23 @@
   <tbody>
     <% @restaurants.each do |restaurant| %>
       <tr>
-        <td><%= restaurant.name %></td>
+        <td><%= restaurant.name.upcase %></td>
         <td><%= restaurant.phone_number %></td>
         <td><%= restaurant.category %></td>
-        <td><%= link_to 'Show', restaurant %></td>
-        <td><%= link_to 'Edit', edit_restaurant_path(restaurant) %></td>
-        <td><%= link_to 'Destroy', restaurant, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= restaurant.address %></td>
+        <td class = "btn btn-primary"><%= link_to 'Show', restaurant %></td>
+        <td class = "btn btn-success"><%= link_to 'Edit', edit_restaurant_path(restaurant) %></td>
+        <td class = "btn btn-danger"><%= link_to 'Destroy', restaurant, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <!-- link to the reviews of the restaurant -->
+        <td><%= link_to 'Reviews', restaurant_reviews_path(restaurant) %></td>
+        <!-- link to add a review -->
+        <td><%= link_to 'Add Review', new_restaurant_review_path(restaurant.id) %></td>
+        <td><%= link_to 'See reviews', restaurant_reviews_path(restaurant) %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+
 
 <br>
 
